# git-sync

./: .dockerignore  .gitignore  Dockerfile  Manual.md  README.md  config.toml.example  docker-compose.yml  pyproject.toml
scripts/: stamp_version.py
src/git_sync/: __init__.py  cli.py  config.py  daemon.py  log.py  state.py
src/git_sync/clients/: __init__.py  github.py  gitlab.py  http.py
src/git_sync/mirror/: __init__.py  git.py  reconcile.py  runner.py
src/git_sync/profile/: __init__.py  render.py  runner.py  stats.py
tests/: conftest.py  test_cli.py  test_config.py  test_daemon.py  test_github.py  test_gitlab.py  test_http.py  test_log.py  test_mirror_git.py  test_mirror_runner.py  test_profile_render.py  test_profile_runner.py  test_profile_stats.py  test_reconcile.py  test_state.py
